feat: add friend & pendingFriendRequest and make end point for requestfriend, accept and decline
